Adding and Configuring Authentication to Program.cs

--- a/FormulaOne/appsettings.json
+++ b/FormulaOne/appsettings.json
@@ -8,5 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultSqlConnection": "Server=DESKTOP-J5LV985\\SQLEXPRESS;Database=FormulaOne;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "JwtConfig": {
+        "Secret": "helloIAmSecret1234567890helloIAmSecret1234567890"
     }
 }
